[package]
name = "jsontoml"
version = "0.2.25"
edition = "2024"
authors = ["voidei", "github.com/pepa65"]
description = "Convert a JSON file to TOML on the CLI"
repository = "https://github.com/pepa65/jsontoml"
readme = "README.md"
license = "MIT"
keywords = ["json", "conversion", "toml"]
categories = ["command-line-utilities"]

[dependencies]
clap = "4.0"
serde_json = "1.0"
toml = "0.5"
